# backend

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: test.yml  tests.yml
content/: apps.py  urls.py
content/admin/: admin.py
content/migrations/: 0001_initial.py
content/models/: __init__.py  content.py
content/serializers/: __init__.py  content.py
content/tests/: tests.py
content/views/: __init__.py  content.py
content_category/: apps.py  urls.py
content_category/admin/: admin.py
content_category/migrations/: 0001_initial.py
content_category/models/: __init__.py  content_category.py
content_category/serializers/: __init__.py  content_category.py
content_category/tests/: tests.py
content_category/views/: __init__.py  content_category.py
content_comment/: apps.py  urls.py
content_comment/admin/: admin.py
content_comment/migrations/: 0001_initial.py
content_comment/models/: __init__.py  content_comment.py
content_comment/serializers/: content_comments.py
content_comment/tests/: tests.py
content_comment/views/: __init__.py  content_comment.py
content_interaction/: apps.py  urls.py
content_interaction/admin/: admin.py
content_interaction/migrations/: 0001_initial.py
content_interaction/models/: __init__.py  content_interaction.py
content_interaction/serializers/: __init__.py  content_interaction.py
content_interaction/tests/: tests.py
content_interaction/views/: __init__.py  content_interaction.py
course/: apps.py  urls.py
course/migrations/: 0001_initial.py
course/models/: __init__.py  course.py
course/serializers/: __init__.py
course/tests/: tests.py
course/views/: __init__.py  course.py
course_category/: apps.py
course_category/migrations/: 0001_initial.py
course_category/models/: course_category.py
course_category/serializers/: course_category.py
course_category/tests/: tests.py
course_category/views/: course_category.py
institution/admin/: admin.py
institution/migrations/: 0001_initial.py
institution/models/: __init__.py
institution/serializers/: institution.py
institution/tests/: tests.py
institution/views/: __init__.py  institution.py
minerva/: asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
minerva/course/: urls.py
minerva/course_category/: urls.py
minerva/courses/: urls.py
minerva/institution/: apps.py  urls.py
minerva/minerva/: asgi.py  settings.py  urls.py  wsgi.py
module/: apps.py  urls.py
users/: urls.py  utils.py  views.py
(+53 files in other folders)
