[tool.poetry]
name = "minerva-backend"
version = "0.0.1"
description = "Backend team repository of Minerva Learning Management System (LMS). Developed by a group of students of Universidad Nacional de Colombia using Django."
authors = ["Carolina Alvarez Murillo <caalvarezmu@unal.edu.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.8.2"
dj-database-url = "^2.3.0"
drf-spectacular = "^0.27.2"
django-environ = "^0.9.0"
pytest = "^7.4"
django-debug-toolbar = "^3.7"

[tool.poetry.dev-dependencies]

[package.dependencies]
typing-extensions = {version = ">=4", markers = "python_version < \"3.11\""}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true